# delegato

./: .gitignore  =5.0  LICENSE  README.md  pyproject.toml
delegato/: __init__.py  assignment.py  audit.py  coordination.py  decomposition.py  delegator.py  events.py  llm.py  models.py  permissions.py  trust.py  verification.py
docs/: design.md  road_map.md
examples/: research_pipeline.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/scripts/: generate-narration.sh
frontend/src/: Root.tsx
frontend/src/components/: AnimatedBar.tsx  CodeBlock.tsx  Counter.tsx  DAGArrow.tsx  DAGNode.tsx  GlowBox.tsx  ParticleField.tsx  TerminalLine.tsx  TrustGraph.tsx  TypewriterText.tsx
frontend/src/data/: benchmarkData.ts  demoOutput.ts
frontend/src/scenes/: Scene1_LogoReveal.tsx  Scene2_TheProblem.tsx  Scene3_Protocol.tsx  Scene3a_Decomposition.tsx  Scene3b_Assignment.tsx  Scene3c_Verification.tsx  Scene3d_TrustSafety.tsx  Scene3e_ParallelDAG.tsx  Scene4_LiveDemo.tsx  Scene5_Architecture.tsx  Scene6_Benchmarks.tsx  Scene7_CodeShowcase.tsx  Scene8_Closing.tsx
frontend/src/styles/: theme.ts
frontend/src/video/: DelegatoDemo.tsx
research/: BENCHMARK_DESIGN.md  benchmark.py  results.csv  tasks.json  trial1.md  trial2.md  trial3.md  trial4.md
tests/: conftest.py  test_assignment.py  test_audit.py  test_coordination.py  test_decomposition.py  test_delegator.py  test_events.py  test_integration.py  test_llm.py  test_models.py  test_permissions.py  test_trust.py  test_verification.py
