[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "delegato"
version = "0.1.0"
description = "Intelligent delegation infrastructure for multi-agent AI systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
