[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "delegato"
version = "0.1.0"
description = "Intelligent delegation infrastructure for multi-agent AI systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=delegato --cov-report=term-missing"

[tool.coverage.run]
source = ["delegato"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
show_missing = true
